Added new files and Img folder

--- a/Todo.html
+++ b/Todo.html
@@ -8,20 +8,20 @@
  <title>ToDo</title>
 </head>
 <body>
-  <div>
+  <header class="ToDo">
   <nav>
       <ul class="nav-area">
         <li><a href="index.html">Home</a></li>
         <li><a href="Todo.html">To Do</a></li>
         <li><a href="contactUS.html">Contact US</a></li>
       </ul>
-    </nav>
-    </div>
-  <dive class="Todo">
+  </nav>
+
   <h1>To Do</h1>
   <hr>
-  <h3>Are you visting Austin TX Soon? Here are a TOP 4 unique spots that make you trip one to remember!</h3>
-
+  <h2>Are you visting Austin TX Soon? Here are a TOP 4 unique spots that make you trip one to remember!</h2>
+  </header>
+  <section>
    <ol>
      <li>BARTON SPRINGS POOL</li>
      <img src="img/pool.jpg" alt="pool">
@@ -41,6 +41,29 @@
      <p>The Austin Aquarium offers amazing activities for your family and friends. Its a great place to learn about the ocean life, and you're able to feed sharks, rays, birds and fish, all ages are welcomed and entry fees range $8-$15.</p>
      
      </ol>
+    </section>
+    <article>
+      <h3>Austin Food Places</h3>
+      <ul>
+        <li>Taco Shop</li>
+        <li>Deserts</li>
+        <li>Breakfast</li>
+        <li>Lunch</li>
+      </ul>
+    </article>
+
+    <Aside>
+      <h3>UPCOMING CONCERT!</h3>
+      <p>ACS Festival line up coming soon!</p>
+      <p>Starts Oct 7, SIGN UP NOW!</p>
+      <label>Email: </label>
+      <input type="text" name="Email" placeholder="road2hire@gmail.com">
+      <button>
+        Submit
+      </button>
+    </Aside>
+
+
 
     <hr>
 
