--- a/contactUS.html
+++ b/contactUS.html
@@ -8,48 +8,66 @@
    <link href="contactUS.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <nav class="nav-area"
+  
+  <header class="header">
+    <h1>CONTACT US</h1>
+     
+     <nav class="nav-area">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Todo.html">To Do</a></li>
-        <li><a href="contactUS.html">Contact US</a></li>
+         <li><a href="index.html">Home</a></li>
+         <li><a href="Todo.html">To Do</a></li>
+         <li><a href="contactUS.html">Contact US</a></li>
       </ul>
     </nav>
- <h1>CONTACT US</h1>
-  <hr>
-
-
+ <hr>
+   </header>
   
-  <h3>ANY QUESTION? FEEL FREE TO EMAIL US FOR MORE INFORMATION!</h3>
-  <li>JORGE LLANES</li>
-  <li>EMAIL: Llanesjorge@EMAIL.COM</li>
-  <li>PHONE: (737)400-1559</li>
-
-
-  <div class="comment-box">
-    <h2>COMMENTS</h2>
-    <form action="#">
-      <input type="text" name="full_name" placeholder="Full Name...">
-      <input type="email" name="email" placeholder="Email Address...">
-      <textarea name="comment" placeholder="Questions?..."></textarea>
-      <button type="submit">Submit Question</button>
-  </form>
-
+<article>
+  <div class="Question">
+  <h2>ANY QUESTION? FEEL FREE TO EMAIL US FOR MORE INFORMATION!</h2>
   </div>
-
-  <hr>
-   <h2>THANK YOU R2H!</h2>
-
-
   
-    <footer class="footer">
-      <p>
-        Copyright &copy; 2022, Create by Jorge J. Llanes
-      </p>
+  <section>
+    <h2>THANK YOU R2H!</h2>
+    <figure>
+      <img src="img/" alt="">
+    </figure>
+      <ul class="list">
+        <li>JORGE LLANES</li>
+        <li>EMAIL: Llanesjorge@EMAIL.COM</li>
+        <li>PHONE: (737)400-1559</li>
+      </ul> 
+  </section>
+      <hr>
+  <section>
     
-    </footer>
+  <form
+    class="comment-box">
+    <h2>COMMENTS</h2>
+       <form action="#">
+          <input type="text" name="full_name" placeholder="Full Name...">
+          <input type="email" name="email" placeholder="Email Address...">
+          <textarea name="comment" placeholder="Questions?..."></textarea>
+          <button type="submit">Submit Question</button>
+    </form>
+  
+
+  </section>
+  
+</article>
+
   
   
   
- </body>
+  <aside class="aside">
+
+
+  </aside>
+
+  <footer>
+    <p class="footer">Copyright@2022 Jorge Llanes Revproject</p>    
+  </footer>
+  
+  </body>
+
 </html>
