Added new mods and ACL image

--- a/contactUS.html
+++ b/contactUS.html
@@ -29,8 +29,9 @@
   
   <section>
     <h2>THANK YOU R2H!</h2>
-    <figure>
-      <img src="img/" alt="">
+    <figure class="figure">
+      <img src="img/road2hire.png" alt="Road2hire">
+      <figcaption>@Road2hire</figcaption>
     </figure>
       <ul class="list">
         <li>JORGE LLANES</li>
@@ -39,13 +40,13 @@
       </ul> 
   </section>
       <hr>
+  
   <section>
     
   <form
     class="comment-box">
     <h2>COMMENTS</h2>
-       <form action="#">
-          <input type="text" name="full_name" placeholder="Full Name...">
+      <input type="text" name="full_name" placeholder="Full Name...">
           <input type="email" name="email" placeholder="Email Address...">
           <textarea name="comment" placeholder="Questions?..."></textarea>
           <button type="submit">Submit Question</button>
@@ -59,10 +60,15 @@
   
   
   
-  <aside class="aside">
-
-
-  </aside>
+<aside class="aside"> 
+    <h3>Road2hire</h3>
+    <P>Sign up NOW!</P>
+  <form>
+  <label>Email:</label>
+  <input type="text" name="Email" placeholder="Road2hire@gmail.com">
+  <input type="Submit" name="Submit">
+  </form>
+</aside>
 
   <footer>
     <p class="footer">Copyright@2022 Jorge Llanes Revproject</p>    
